code committed for swagger.yaml and services.
