# api/swagger.yaml
@@ -1982,6 +1982,94 @@ paths:
           description: "Validation exception"
           schema:
             type: file
+      x-swagger-router-controller: "insurancePolicyController"
+      
+  /auditorSearchPoliciesByBank/{bankId}/{attributeName}/{attributeValue}:
+    options:
+      tags:
+      - "Auditor"
+      summary: "Get success for options"
+      description: "This service is used to search Policies by auditor"
+      operationId: "auditorSearchPoliciesByBankOptions"
+      security:
+        - Bearer: []
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "token"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "bankId"
+        in: "path"
+        description: "bank Name"
+        required: true
+        type: "string"
+      - name: "attributeName"
+        in: "path"
+        description: "attribute/field Name"
+        required: true
+        type: "string"
+      - name: "attributeValue"
+        in: "path"
+        description: "attribute/field Value"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Data not found"
+        405:
+          description: "Validation exception"
+      x-swagger-router-controller: "insurancePolicyController"
+    get:
+      tags:
+      - "Auditor"
+      summary: "search IPolicies"
+      description: "This service used to  search Policies"
+      operationId: "auditorSearchPoliciesByBank"
+      security:
+        - Bearer: []
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "token"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "bankId"
+        in: "path"
+        description: "bank Name"
+        required: true
+        type: "string"
+      - name: "attributeName"
+        in: "path"
+        description: "attributeName"
+        required: true
+        type: "string"
+      - name: "attributeValue"
+        in: "path"
+        description: "attributeValue"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Data not found"
+        405:
+          description: "Validation exception"
+          schema:
+            type: file
       x-swagger-router-controller: "insurancePolicyController" 
 
   
